# GPU-NTT

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md
benchmark/: CMakeLists.txt  bench_4step_ntt.cu  bench_merge_ntt.cu  bench_util.cuh
cmake/: Config.cmake.in
cmake-build/: CMakeCache.txt  Makefile  bench_ntt_gpu  cmake_install.cmake  test_ntt_gpu
example/: CMakeLists.txt
example/cpu_ntt/: CMakeLists.txt  test_cpu_4step_ntt.cu  test_cpu_merge_ntt.cu
example/gpu_ntt/: CMakeLists.txt
example/gpu_ntt/ntt_4step/: CMakeLists.txt  test_4step_intt.cu  test_4step_ntt.cu
example/gpu_ntt/ntt_merge/: CMakeLists.txt  test_merge_intt.cu  test_merge_ntt.cu
example/ntt_4step/: test_4step_intt.cu  test_4step_ntt.cu  test_cpu_4step_ntt.cu
example/ntt_merge/: test_cpu_merge_ntt.cu  test_merge_intt.cu  test_merge_ntt.cu
src/: CMakeLists.txt  common.cu  common.cuh  modular_arith.cuh  ntt.cu  ntt.cuh  ntt_cpu.cu  ntt_cpu.cuh  nttparameters.cu  nttparameters.cuh
src/common/include/: CMakeLists.txt  common.cuh  modular_arith.cuh  nttparameters.cuh
src/common/lib/: CMakeLists.txt  common.cu  nttparameters.cu
src/include/common/: common.cuh  modular_arith.cuh  nttparameters.cuh
src/include/gpuntt/common/: common.cuh  modular_arith.cuh  nttparameters.cuh
src/include/gpuntt/ntt_4step/: ntt_4step.cuh  ntt_4step_cpu.cuh
src/include/gpuntt/ntt_merge/: ntt.cuh  ntt_cpu.cuh
src/include/ntt_4step/: ntt_4step.cuh  ntt_4step_cpu.cuh
src/include/ntt_merge/: ntt.cuh  ntt_cpu.cuh
src/lib/common/: common.cu  nttparameters.cu
src/lib/ntt_4step/: ntt_4step.cu  ntt_4step_cpu.cu
src/lib/ntt_merge/: ntt.cu  ntt_cpu.cu
src/ntt/: CMakeLists.txt
src/ntt/butterfly/: CMakeLists.txt
src/ntt/butterfly/include/: CMakeLists.txt  butterfly.cuh
src/ntt/butterfly/lib/: CMakeLists.txt  butterfly.cu
src/ntt/ntt_4step/include/: CMakeLists.txt  ntt_4step.cuh  ntt_4step_cpu.cuh
src/ntt/ntt_4step/lib/: CMakeLists.txt  ntt_4step.cu  ntt_4step_cpu.cu
src/ntt/ntt_merge/include/: CMakeLists.txt  ntt.cuh  ntt_cpu.cuh
src/ntt/ntt_merge/lib/: CMakeLists.txt  ntt.cu  ntt_cpu.cu
test/: ntt_cpu_test.cu  ntt_gpu_bench.cu  ntt_gpu_test copy.cu  ntt_gpu_test.cu
