cmake_minimum_required(VERSION 3.2)
project(GPUNTT VERSION 1.0 LANGUAGES C CXX CUDA ASM)

set(BINARY_LOCATION ${CMAKE_CURRENT_BINARY_DIR}/bin)

set(CMAKE_CUDA_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(CUDAToolkit REQUIRED)

if(NOT DEFINED CMAKE_CUDA_ARCHITECTURES)
    set(CMAKE_CUDA_ARCHITECTURES 75)
endif()
message(STATUS "Setting CMAKE_CUDA_ARCHITECTURES to ${CMAKE_CUDA_ARCHITECTURES} for GPUNTT")

##################
# Export Library #
##################

set(RUNTIME_DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
set(LIBRARY_DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
set(ARCHIVE_DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
set(INCLUDES_DESTINATION ${CMAKE_INSTALL_PREFIX}/include)
set(INCLUDES_INSTALL_DIR ${INCLUDES_DESTINATION}/GPUNTT-${PROJECT_VERSION})

set(GPUNTT_GENERATED_DIR "${CMAKE_CURRENT_BINARY_DIR}/generated")
set(GPUNTT_VERSION_CONFIG "${GPUNTT_GENERATED_DIR}/${PROJECT_NAME}ConfigVersion.cmake")
set(GPUNTT_PROJECT_CONFIG "${GPUNTT_GENERATED_DIR}/${PROJECT_NAME}Config.cmake")
set(GPUNTT_TARGETS_EXPORT_NAME "${PROJECT_NAME}Targets")
set(GPUNTT_CONFIG_INSTALL_DIR "lib/cmake/${PROJECT_NAME}-${PROJECT_VERSION}")
set(GPUNTT_NAMESPACE "${PROJECT_NAME}::")
set(GPUNTT_VERSION 1.0)

include(CMakePackageConfigHelpers)
write_basic_package_version_file(
    "${GPUNTT_VERSION_CONFIG}" VERSION ${GPUNTT_VERSION} COMPATIBILITY SameMajorVersion
)
configure_file("${GPUNTT_SOURCE_DIR}/cmake/Config.cmake.in" "${GPUNTT_PROJECT_CONFIG}" @ONLY)

install(
    FILES "${GPUNTT_PROJECT_CONFIG}" "${GPUNTT_VERSION_CONFIG}"
    DESTINATION "${GPUNTT_CONFIG_INSTALL_DIR}")

install(
    EXPORT "${GPUNTT_TARGETS_EXPORT_NAME}"
    NAMESPACE "${GPUNTT_NAMESPACE}"
    DESTINATION "${GPUNTT_CONFIG_INSTALL_DIR}")

add_subdirectory(src)

############
# Examples #
############

option(GPUNTT_BUILD_EXAMPLES "Build GPU-NTT Examples" OFF)
message(STATUS "GPUNTT_BUILD_EXAMPLES: ${GPUNTT_BUILD_EXAMPLES}")
if(GPUNTT_BUILD_EXAMPLES)
    add_subdirectory(example)
endif()

##############
# BENCHMARKS #
##############

option(GPUNTT_BUILD_BENCHMARKS "Build GPU-NTT Benchmarks" OFF)
message(STATUS "GPUNTT_BUILD_BENCHMARKS: ${GPUNTT_BUILD_BENCHMARKS}")
if(GPUNTT_BUILD_BENCHMARKS)
    add_subdirectory(benchmark)
endif()
